Release v0.5.12: full GTNH RFB / Java 22+ JVM-args enforcement
Eight-version iterative fix chain (v0.5.0 -> v0.5.12) to make
-Djdk.util.jar.version=21 take effect automatically in GTNH RFB
modpacks under Java 22+, with no manual launcher configuration
required.

Same jar simultaneously serves as Forge mod / CoreMod / Java Agent /
LaunchWrapper Tweaker (declared via four manifest entries).

Iteration history (each version solved a real user-reported bug):

  v0.5.0  LaunchWrapper Tweaker entry; fork child JVM with the
          missing -D so users do not have to edit launcher configs
  v0.5.5  RFB jar discovery via CodeSource — fixes child JVM
          initPhase3 ClassNotFoundException for RfbSystemClassLoader
          (RFB strips its own jar from java.class.path post-bootstrap)
  v0.5.6  add ClassLoader.getResource() strategy + extensive
          [relaunch-cp] diagnostic logging
  v0.5.7  drop @argfile (Windows java.exe reads it as ANSI / GBK,
          mangling UTF-8 non-ASCII paths like 中文); use
          ProcessBuilder with List<String> directly so Windows
          start() goes through CreateProcessW (Unicode-safe)
  v0.5.8  recover quoted main args (e.g. --version "GT NH 2.8.4")
          via ProcessHandle.info().arguments() (Java 9+, called
          reflectively to keep Java 8 source level)
  v0.5.9  three-strategy locateMainArgsStart (-jar mode / exact FQN
          match / jar-basename path-suffix match) plus
          commandLine() string fallback with own tokenizer
  v0.5.10 fix IllegalAccessException by reflecting on the public
          interface java.lang.ProcessHandle$Info instead of the
          package-private impl ProcessHandleImpl$Info (Java 9+
          module system blocks cross-module impl-class access)
  v0.5.11 LaunchArgsCapture: snapshot args at Tweaker stage where
          LaunchWrapper hands us (args, gameDir, assetsDir, profile)
          already parsed with quote boundaries intact. Side-steps
          Windows OS denying ProcessHand